--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,34 @@
 body {
     padding-top: 5rem;
 }
+
+.grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.grid-item {
+    
+    padding: 15px;
+    
+}
+
+img {
+    width: 120px;
+    height: 120px;
+    width: 120px;
+    height: 120px;
+}
+
+.grid-item img {
+    margin-top: 8px;
+    vertical-align: middle;
+    max-width: 400px;
+}
+ul {
+    list-style-type: none;
+} 
